<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <!-- Hijo 1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_surname" />

    <EditText
        android:id="@+id/input_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/action_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save" />

    <Button
        android:id="@+id/action_clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_clean" />

    <Button
        android:id="@+id/action_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_recover" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="asdasdasdasdasd" />

    <TextView
        android:id="@+id/text_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rotationY="41"
        android:text="apellido" />


</LinearLayout>